--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,7 +5,8 @@
   "exports": {
     "./buttonLabelAndIcon": "./src/buttonLabelAndIcon.tsx",
     "./card": "./src/card.tsx",
-    "./code": "./src/code.tsx"
+    "./code": "./src/code.tsx",
+    "./sidebar": "./src/sidebar.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
