--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,7 +6,8 @@
     "./buttonLabelAndIcon": "./src/buttonLabelAndIcon.tsx",
     "./card": "./src/card.tsx",
     "./code": "./src/code.tsx",
-    "./sidebar": "./src/sidebar.tsx"
+    "./sidebar": "./src/sidebar.tsx",
+    "./inputSelect": "./src/inputSelect.tsx"
   },
   "scripts": {
     "lint": "eslint . --max-warnings 0",
