--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,9 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.7",
     "@repo/ui": "*",
     "next": "^15.1.6",
     "react": "^19.0.0",
