Add PDF generation using pdfkit and include logo in service order document

--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "packages/*"
   ],
   "dependencies": {
+    "jsreport-chrome-pdf": "^1.10.0",
+    "jsreport-core": "^2.10.1",
+    "jsreport-handlebars": "^2.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
