--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,10 +15,8 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.7",
     "@repo/ui": "*",
-    "jsreport-chrome-pdf": "^1.10.0",
-    "jsreport-core": "^2.10.1",
-    "jsreport-handlebars": "^2.1.0",
     "next": "^15.1.6",
+    "pdfkit": "^0.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -27,10 +25,10 @@
     "@repo/typescript-config": "*",
     "@types/jsreport-core": "^2.0.9",
     "@types/node": "^22",
+    "@types/pdfkit": "^0.13.9",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "eslint": "^9.20.0",
-    "jsreport-core": "^2.10.1",
     "typescript": "5.7.3"
   }
 }
