--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "packages/*"
   ],
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "jsreport-chrome-pdf": "^1.10.0",
     "jsreport-core": "^2.10.1",
     "jsreport-handlebars": "^2.1.0",
