--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.7",
     "@repo/ui": "*",
+    "@repo/i18n": "*",
     "next": "^15.1.6",
     "pdfkit": "^0.16.0",
     "react": "^19.0.0",
