feat(database): initialize Prisma setup with User and Access models
- Added Prisma schema defining User and Access models with relationships.
- Created enums for Department and AccessLevel.
- Generated migration files for PostgreSQL database setup.
- Introduced package.json for database package with necessary scripts and dependencies.
- Implemented Prisma client instantiation in client.ts and exported it.
- Updated translation files in i18n package for account creation messages.
- Enhanced UI header with new People icon and adjusted notification badge counts.
- Modified turbo.json to include database generation and migration tasks in build process.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^6.4.7",
     "@repo/i18n": "*",
     "@repo/ui": "*",
+    "@repo/db": "*",
+    "bcrypt": "^6.0.0",
     "next": "^15.1.6",
     "next-auth": "^4.24.11",
     "pdfkit": "^0.16.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "*",
+    "@types/bcrypt": "^5.0.2",
     "@types/jsreport-core": "^2.0.9",
     "@types/node": "^22",
     "@types/pdfkit": "^0.13.9",
